@@ -34,7 +34,7 @@ public class CategoryServiceImpl implements CategoryService {
         List<Category> categories = categoryRepository.findAll();
         return categories.stream()
                 .map(categoryRowMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
